--- a/index.html
+++ b/index.html
@@ -3,10 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Harradise - Ubytování v Harrachově</title>
+    <title>Harradise Harrachov</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 50px;
+            color: #333;
+        }
+        h1 {
+            font-size: 32px;
+            margin-bottom: 5px;
+        }
+        h2 {
+            font-size: 24px;
+            font-weight: normal;
+            color: #666;
+            margin-top: 0;
+        }
+        p {
+            font-size: 18px;
+            margin: 15px 0;
+        }
+        a {
+            color: #0073e6;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-    <h1>Vítejte v Harrachově!</h1>
-    <p>Nabízíme ubytování v plně vybaveném apartmánu pod Mumlavským vodopádem.</p>
+    <h1>Harradise Harrachov</h1>
+    <h2>Prostě ráj.</h2>
+    
+    <p>Na webu se pracuje,</p>
+    <p>svůj pobyt si zatím můžete rezervovat <a href="https://www.booking.com/Share-Pz2DesE" target="_blank">zde</a>,</p>
+    <p>nebo nám <a href="mailto:hajek.stiburkova@gmail.com">napište</a>.</p>
+    
+    <p>Mrkněte také na náš <a href="https://www.instagram.com/harradise__?igsh=YjZlN2Exb2hsOXpp" target="_blank">Instagram</a>.</p>
 </body>
 </html>
