--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <body>
     <h1>Harradise Harrachov</h1>
     <h2>Prostě ráj.</h2>
+    <p>Plně vybavený apartmán (nejen) pro rodiny v Harrachově pod Mumlavským vodopádem.</p>
     
     <p>Na webu se pracuje,</p>
     <p>svůj pobyt si zatím můžete rezervovat <a href="https://www.booking.com/Share-Pz2DesE" target="_blank">zde</a>,</p>
