--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
     <h1>Harradise Harrachov</h1>
     <h2>Prostě ráj.</h2>
     <p>Plně vybavený apartmán (nejen) pro rodiny v Harrachově pod Mumlavským vodopádem.</p>
+
+<ul style="list-style: none; padding: 0; font-size: 18px; line-height: 1.6;">
+    <li>✔️ Ideální výchozí bod pro turistiku</li>
+    <li>✔️ Velmi klidná poloha nedaleko centra</li>
+    <li>✔️ Vybavení pro děti</li>
+    <li>✔️ Wellness a sportovní centrum přímo naproti vchodu</li>
+    <li>✔️ Zahrada s ohništěm u domu</li>
+    <li>✔️ Velkolepá příroda všude kolem</li>
+</ul>
     
     <p>Na webu se pracuje,</p>
     <p>svůj pobyt si zatím můžete rezervovat <a href="https://www.booking.com/Share-Pz2DesE" target="_blank">zde</a>,</p>
