--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
     <h2>Prostě ráj.</h2>
     <p>Plně vybavený apartmán (nejen) pro rodiny v Harrachově pod Mumlavským vodopádem.</p>
 
-<ul style="list-style: none; padding: 0; font-size: 18px; line-height: 1.6;">
-    <li>✔️ Ideální výchozí bod pro turistiku</li>
-    <li>✔️ Velmi klidná poloha nedaleko centra</li>
-    <li>✔️ Vybavení pro děti</li>
-    <li>✔️ Wellness a sportovní centrum přímo naproti vchodu</li>
-    <li>✔️ Zahrada s ohništěm u domu</li>
-    <li>✔️ Velkolepá příroda všude kolem</li>
-</ul>
+<div style="text-align: left; display: inline-block; margin: 0 auto; font-size: 18px; line-height: 1.6; text-indent: -1.4em; padding-left: 1.4em;">
+    ✔️ Ideální výchozí bod pro turistiku<br>
+    ✔️ Velmi klidná poloha nedaleko centra<br>
+    ✔️ Vybavení pro děti<br>
+    ✔️ Wellness a sportovní centrum přímo naproti vchodu<br>
+    ✔️ Zahrada s ohništěm u domu<br>
+    ✔️ Velkolepá příroda všude kolem
+</div>
     
     <p>Na webu se pracuje,</p>
     <p>svůj pobyt si zatím můžete rezervovat <a href="https://www.booking.com/Share-Pz2DesE" target="_blank">zde</a>,</p>
