--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Harradise Harrachov</title>
     <style>
         body {
+            <img src="logo.png" alt="Harradise logo" style="width: 150px; margin-bottom: 20px; display: block; margin-left: auto; margin-right: auto;">
             font-family: Arial, sans-serif;
             text-align: center;
             margin: 50px;
