--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </style>
 </head>
 <body>
-    <img src="logo.png" alt="Harradise logo" style="width: 150px; margin-bottom: 20px; display: block; margin-left: auto; margin-right: auto;">
+    <img src="Harradise.png" alt="Harradise logo" style="width: 150px; margin-bottom: 20px; display: block; margin-left: auto; margin-right: auto;">
     <h1>Harradise Harrachov</h1>
     <h2>Prostě ráj.</h2>
     <p>Plně vybavený apartmán (nejen) pro rodiny v Harrachově pod Mumlavským vodopádem.</p>
