--- a/index.html
+++ b/index.html
@@ -1,58 +1,39 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Harradise Harrachov</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 50px;
-            color: #333;
-        }
-        h1 {
-            font-size: 32px;
-            margin-bottom: 5px;
-        }
-        h2 {
-            font-size: 24px;
-            font-weight: normal;
-            color: #666;
-            margin-top: 0;
-        }
-        p {
-            font-size: 18px;
-            margin: 15px 0;
-        }
-        a {
-            color: #0073e6;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Harradise Harrachov</title>
 </head>
-<body>
-    <img src="Harradise.png" alt="Harradise logo" style="width: 150px; margin-bottom: 20px; display: block; margin-left: auto; margin-right: auto;">
-    <h1>Harradise Harrachov</h1>
-    <p>Plně vybavený apartmán (nejen) pro rodiny v Harrachově pod Mumlavským vodopádem.</p>
+<body style="font-family: Arial, sans-serif; text-align: center; background-color: white; color: #333; padding: 40px;">
 
-<ul style="text-align: left; display: inline-block; margin: 0 auto; font-size: 18px; line-height: 1.6; padding-left: 20px;">
-  <li>Ideální výchozí bod pro turistiku</li>
-  <li>Velmi klidná poloha nedaleko centra</li>
-  <li>Vybavení pro děti</li>
-  <li>Wellness a sportovní centrum přímo naproti vchodu</li>
-  <li>Zahrada s ohništěm u domu</li>
-  <li>Velkolepá příroda všude kolem</li>
-</ul>
-    
-    <p>Na webu se pracuje,</p>
-    <p>svůj pobyt si zatím můžete rezervovat <a href="https://www.booking.com/Share-Pz2DesE" target="_blank">zde</a>,</p>
-    <p>nebo nám <a href="mailto:hajek.stiburkova@gmail.com">napište</a>.</p>
-    
-    <p>Mrkněte také na náš <a href="https://www.instagram.com/harradise__?igsh=YjZlN2Exb2hsOXpp" target="_blank">Instagram</a>.</p>
+  <!-- Zvýrazněný informační blok -->
+  <div style="border: 2px solid #ff4d4d; background-color: #ffecec; padding: 15px; margin-bottom: 40px; max-width: 500px; margin-left: auto; margin-right: auto; font-size: 18px;">
+    <strong>Na webu se pracuje.</strong><br>
+    Svůj pobyt si zatím můžete rezervovat <a href="https://www.booking.com/Share-Pz2DesE" target="_blank" style="color: #d10000; font-weight: bold;">zde</a>,<br>
+    nebo nám <a href="mailto:hajek.stiburkova@gmail.com" style="color: #d10000; font-weight: bold;">napište</a>.<br><br>
+    Mrkněte také na náš <a href="https://www.instagram.com/harradise__?igsh=YjZlN2Exb2hsOXpp" target="_blank" style="color: #d10000; font-weight: bold;">Instagram</a>.
+  </div>
+
+  <!-- Logo -->
+  <img src="logo.png" alt="Harradise logo" style="width: 150px; margin-bottom: 20px; display: block; margin-left: auto; margin-right: auto;">
+
+  <!-- Nadpisy -->
+  <h1>Harradise Harrachov</h1>
+  <h2 style="margin-top: 0;">Prostě ráj.</h2>
+  <p style="font-size: 18px; margin-bottom: 30px;">
+    Plně vybavený apartmán (nejen) pro rodiny v Harrachově pod Mumlavským vodopádem.
+  </p>
+
+  <!-- Výhody -->
+  <ul style="text-align: left; display: inline-block; margin: 0 auto; font-size: 18px; line-height: 1.6; padding-left: 20px;">
+    <li>Ideální výchozí bod pro turistiku</li>
+    <li>Velmi klidná poloha nedaleko centra</li>
+    <li>Vybavení pro děti</li>
+    <li>Wellness a sportovní centrum přímo naproti vchodu</li>
+    <li>Zahrada s ohništěm u domu</li>
+    <li>Velkolepá příroda všude kolem</li>
+  </ul>
+
 </body>
 </html>
