--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </div>
 
   <!-- Logo -->
-  <img src="harradise.png" alt="Harradise logo" style="width: 150px; margin-bottom: 20px; display: block; margin-left: auto; margin-right: auto;">
+<img src="Harradise.png" alt="Harradise logo" style="width: 150px; margin-bottom: 20px; display: block; margin-left: auto; margin-right: auto;">
 
   <!-- Nadpisy -->
   <h1>Harradise Harrachov</h1>
