--- a/index.html
+++ b/index.html
@@ -20,18 +20,17 @@
 
   <!-- Nadpisy -->
   <h1>Harradise Harrachov</h1>
-  <h2 style="margin-top: 0;">Prostě ráj.</h2>
   <p style="font-size: 18px; margin-bottom: 30px;">
     Plně vybavený apartmán (nejen) pro rodiny v Harrachově pod Mumlavským vodopádem.
   </p>
 
   <!-- Výhody -->
   <ul style="text-align: left; display: inline-block; margin: 0 auto; font-size: 18px; line-height: 1.6; padding-left: 20px;">
-    <li>Ideální výchozí bod pro turistiku</li>
+    <li>Ideální výchozí bod na skialpy a běžky</li>
     <li>Velmi klidná poloha nedaleko centra</li>
     <li>Vybavení pro děti</li>
-    <li>Wellness a sportovní centrum přímo naproti vchodu</li>
-    <li>Zahrada s ohništěm u domu</li>
+    <li>Kousek do lyžařského areálu v centru i na Rýžovišti</li>
+    <li>Zahrada za domem na stavění sněhuláků a hraní si ve sněhu</li>
     <li>Velkolepá příroda všude kolem</li>
   </ul>
 
