--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
   <!-- Výhody -->
   <ul style="text-align: left; display: inline-block; margin: 0 auto; font-size: 18px; line-height: 1.6; padding-left: 20px;">
-    <li>Ideální výchozí bod na skialpy a běžky</li>
-    <li>Velmi klidná poloha nedaleko centra</li>
-    <li>Vybavení pro děti</li>
-    <li>Kousek do lyžařského areálu v centru i na Rýžovišti</li>
+    <li>Ideální výchozí bod na skialpy a běžky, nástup do stopy hned za domem</li>
+    <li>Kousek do lyžařského areálu v centru města i na Rýžovišti, 300 m od zastávky skibusu</li>
+    <li>Velmi klidná poloha přímo pod Mumlavskými vodopády</li>
+    <li>Plně vybavený apartmán, vč. kompletního vybavení pro děti</li>
     <li>Zahrada za domem na stavění sněhuláků a hraní si ve sněhu</li>
     <li>Velkolepá příroda všude kolem</li>
   </ul>
