--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
     <section class="card">
       <h3>Proč Harradise</h3>
       <ul class="features">
-        <li>Ideální výchozí bod pro turistiku</li>
+        <li>Ideální výchozí bod na běžky a skialpy, 200 m od stop</li>
+        <li>Skiareál Harrachov nedaleko, zastávka skibusu 300</li>
+        <li>Plně vybavený apartmán, vč. kompletního vybavení pro děti</li>
         <li>Velmi klidná poloha nedaleko centra</li>
-        <li>Vybavení pro děti</li>
-        <li>Wellness a sportovní centrum přímo naproti vchodu</li>
-        <li>Zahrada s ohništěm u domu</li>
+        <li>Velká zahrada na dělání sněhuláků a řádění na sněhu, mimo silnice</li>
         <li>Velkolepá příroda všude kolem</li>
       </ul>
     </section>
@@ -157,9 +157,9 @@
       <h3>O apartmánu</h3>
       <p>
         Klidná poloha v pěším dosahu centra, přímo u stezek k Mumlavskému vodopádu.
-        Soukromé parkování, vybavení pro děti, zahrada s ohništěm. Wellness a sportovní centrum naproti vchodu.
+        Soukromé parkování, plně vybavená kuchyň, vybavení pro děti, zahrada a vlastní parkovací místo.
       </p>
-      <p>Dotazy? <a href="mailto:hajek.stiburkova@gmail.com">hajek.stiburkova@gmail.com</a></p>
+      <p>Máte dotazy? Napište <a href="mailto:hajek.stiburkova@gmail.com">hajek.stiburkova@gmail.com</a></p>
     </section>
   </main>
 
