--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <strong>Na webu se pracuje.</strong><br>
         Svůj pobyt si zatím můžete rezervovat
         <a href="https://www.booking.com/Share-Pz2DesE" target="_blank" rel="noopener">zde</a>,
-        nebo nám <a href="mailto:hajek.stiburkova@gmail.com">napište</a>.
+        nebo nám pro individuální cenu <a href="mailto:hajek.stiburkova@gmail.com">napište</a>.
         <br><br>
         Mrkněte také na náš
         <a href="https://www.instagram.com/harradise__?igsh=YjZlN2Exb2hsOXpp" target="_blank" rel="noopener">Instagram</a>.
@@ -120,9 +120,9 @@
       <img src="Harradise.png" alt="Harradise logo" class="logo">
 
       <div class="stack-center">
-        <h1 class="title">Harradise Harrachov</h1>
+        <h1 class="title">HARRADISE HARRACHOV</h1>
         <p class="lead">Plně vybavený apartmán (nejen) pro rodiny v Harrachově pod Mumlavským vodopádem.</p>
-        <a class="cta" href="https://www.booking.com/Share-Pz2DesE" target="_blank" rel="noopener">Rezervovat na Booking.com</a>
+        <a class="cta" href="https://www.booking.com/Share-Pz2DesE" target="_blank" rel="noopener">Rezervujte si svůj pobyt na Booking.com</a>
       </div>
     </div>
   </header>
@@ -159,7 +159,7 @@
         Klidná poloha v pěším dosahu centra, přímo u stezek k Mumlavskému vodopádu.
         Soukromé parkování, plně vybavená kuchyň, vybavení pro děti, zahrada a vlastní parkovací místo.
       </p>
-      <p>Máte dotazy? Napište <a href="mailto:hajek.stiburkova@gmail.com">hajek.stiburkova@gmail.com</a></p>
+      <p>Napište nám! <a href="mailto:hajek.stiburkova@gmail.com">hajek.stiburkova@gmail.com</a></p>
     </section>
   </main>
 
