--- a/index.html
+++ b/index.html
@@ -106,15 +106,14 @@
   <header>
     <div class="container">
       <!-- zvýrazněná informace nahoře -->
-      <div class="notice">
-        <strong>Na webu se pracuje.</strong><br>
-        Svůj pobyt si zatím můžete rezervovat
-        <a href="https://www.booking.com/Share-Pz2DesE" target="_blank" rel="noopener">zde</a>,
-        nebo nám pro individuální cenu <a href="mailto:hajek.stiburkova@gmail.com">napište</a>.
-        <br><br>
-        Mrkněte také na náš
-        <a href="https://www.instagram.com/harradise__?igsh=YjZlN2Exb2hsOXpp" target="_blank" rel="noopener">Instagram</a>.
-      </div>
+<div class="notice">
+  <strong>Na webu se pracuje.</strong><br>
+  Máte dotazy nebo chcete individuální cenu?
+  <a href="mailto:hajek.stiburkova@gmail.com">Napište nám</a>.
+  <br><br>
+  Mrkněte také na náš
+  <a href="https://www.instagram.com/harradise__?igsh=YjZlN2Exb2hsOXpp" target="_blank" rel="noopener">Instagram</a>.
+</div>
 
       <!-- logo (změň název, pokud je jiný než Harradise.png) -->
       <img src="Harradise.png" alt="Harradise logo" class="logo">
@@ -122,7 +121,7 @@
       <div class="stack-center">
         <h1 class="title">HARRADISE HARRACHOV</h1>
         <p class="lead">Plně vybavený apartmán (nejen) pro rodiny v Harrachově pod Mumlavským vodopádem.</p>
-        <a class="cta" href="https://www.booking.com/Share-Pz2DesE" target="_blank" rel="noopener">Rezervujte si svůj pobyt na Booking.com</a>
+        <a class="cta" href="https://www.booking.com/Share-Pz2DesE" target="_blank" rel="noopener">Rezervujte si svůj pobyt zde</a>
       </div>
     </div>
   </header>
@@ -133,10 +132,10 @@
       <h3>Proč Harradise</h3>
       <ul class="features">
         <li>Ideální výchozí bod na běžky a skialpy, 200 m od stop</li>
-        <li>Skiareál Harrachov nedaleko, zastávka skibusu 300</li>
+        <li>Skiareál Harrachov nedaleko, zastávka skibusu 300 m</li>
         <li>Plně vybavený apartmán, vč. kompletního vybavení pro děti</li>
         <li>Velmi klidná poloha nedaleko centra</li>
-        <li>Velká zahrada na dělání sněhuláků a řádění na sněhu, mimo silnice</li>
+        <li>Velká zahrada za domem na dělání sněhuláků a řádění na sněhu</li>
         <li>Velkolepá příroda všude kolem</li>
       </ul>
     </section>
