--- a/index.html
+++ b/index.html
@@ -142,13 +142,11 @@
 
     <!-- Galerie – zatím zástupné náhledy; vyměň src za tvé fotky -->
     <section>
-      <h3 class="center">Fotky (brzy doplníme)</h3>
-      <div class="gallery">
-        <!-- Až budeš mít fotky, nahraj je do /images a změň src, např. src="images/apartman-1.jpg" -->
-        <img class="thumb placeholder" alt="foto apartmánu – brzy" src="" onerror="this.outerHTML='<div class=&quot;thumb placeholder&quot;>Nahrajte fotku 1</div>'">
-        <img class="thumb placeholder" alt="foto apartmánu – brzy" src="" onerror="this.outerHTML='<div class=&quot;thumb placeholder&quot;>Nahrajte fotku 2</div>'">
-        <img class="thumb placeholder" alt="foto apartmánu – brzy" src="" onerror="this.outerHTML='<div class=&quot;thumb placeholder&quot;>Nahrajte fotku 3</div>'">
-      </div>
+   <div class="gallery">
+    <img class="thumb" src="images/fotka1.jpg" alt="Apartmán – obývací pokoj">
+    <img class="thumb" src="images/fotka2.jpg" alt="Apartmán – ložnice">
+    <img class="thumb" src="images/fotka3.jpg" alt="Mumlavský vodopád">
+  </div>
     </section>
 
     <!-- Informace o apartmánu – můžeš postupně rozšířit -->
