--- a/index.html
+++ b/index.html
@@ -142,10 +142,11 @@
 
     <!-- Galerie – zatím zástupné náhledy; vyměň src za tvé fotky -->
     <section>
-   <div class="gallery">
-    <img class="thumb" src="images/fotka1.jpg" alt="Apartmán – obývací pokoj">
-    <img class="thumb" src="images/fotka2.jpg" alt="Apartmán – ložnice">
-    <img class="thumb" src="images/fotka3.jpg" alt="Mumlavský vodopád">
+<h3 class="center">Fotky</h3>
+  <div class="gallery">
+    <img class="thumb" src="images/IMG_20210527_154538~2.jpg" alt="Apartmán – obývací pokoj">
+    <img class="thumb" src="images/20241123_101905(1).jpg" alt="Apartmán – ložnice">
+    <img class="thumb" src="images/20250415_161024~2.jpg" alt="Pohled na okolí Harrachova">
   </div>
     </section>
 
