--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         Klidná poloha v pěším dosahu centra, přímo u stezek k Mumlavskému vodopádu.
         Soukromé parkování, plně vybavená kuchyň, vybavení pro děti, zahrada a vlastní parkovací místo.
       </p>
-      <p>Napište nám! <a href="mailto:hajek.stiburkova@gmail.com">hajek.stiburkova@gmail.com</a></p>
+      <p>Napište nám: <a href="mailto:hajek.stiburkova@gmail.com">hajek.stiburkova@gmail.com</a></p>
     </section>
   </main>
 
