--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <div class="stack-center">
         <h1 class="title">HARRADISE HARRACHOV</h1>
         <p class="lead">Plně vybavený apartmán (nejen) pro rodiny v Harrachově pod Mumlavským vodopádem.</p>
-        <a class="cta" href="https://www.booking.com/Share-Pz2DesE" target="_blank" rel="noopener">Rezervujte si svůj pobyt zde</a>
+        <a class="cta" href="https://www.booking.com/Share-Pz2DesE" target="_blank" rel="noopener">Rezervujte si svůj pobyt tady</a>
       </div>
     </div>
   </header>
