--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
       <!-- logo (změň název, pokud je jiný než Harradise.png) -->
       <img src="Harradise.png" alt="Harradise logo" class="logo">
-
+<h1 class="title">Harradise Harrachov – Vaše ubytování v Krkonoších</h1>
       <div class="stack-center">
         <p class="lead">Plně vybavený apartmán (nejen) pro rodiny v Harrachově pod Mumlavským vodopádem.</p>
         <a class="cta" href="https://www.booking.com/Share-Pz2DesE" target="_blank" rel="noopener">Rezervujte si svůj pobyt tady</a>
