--- a/index.html
+++ b/index.html
@@ -117,7 +117,10 @@
 
       <!-- logo (změň název, pokud je jiný než Harradise.png) -->
       <img src="Harradise.png" alt="Harradise logo" class="logo">
-<h1 class="title">Harradise Harrachov – Vaše ubytování v Krkonoších</h1>
+<div style="margin-bottom: 20px;">
+  <h1 style="font-size: 28px; margin: 0; line-height: 1.2;">Harradise Harrachov</h1>
+  <h2 style="font-size: 20px; font-weight: normal; color: #555; margin: 6px 0 0;">Vaše ubytování v Krkonoších</h2>
+</div>
       <div class="stack-center">
         <p class="lead">Plně vybavený apartmán (nejen) pro rodiny v Harrachově pod Mumlavským vodopádem.</p>
         <a class="cta" href="https://www.booking.com/Share-Pz2DesE" target="_blank" rel="noopener">Rezervujte si svůj pobyt tady</a>
