--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
       <!-- logo (změň název, pokud je jiný než Harradise.png) -->
       <img src="Harradise.png" alt="Harradise logo" class="logo">
-<div style="margin-bottom: 20px;">
+<div style="margin-bottom: 20px; text-align: center;">
   <h1 style="font-size: 28px; margin: 0; line-height: 1.2;">Harradise Harrachov</h1>
   <h2 style="font-size: 20px; font-weight: normal; color: #555; margin: 6px 0 0;">Vaše ubytování v Krkonoších</h2>
 </div>
