--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
 
       <!-- logo (změň název, pokud je jiný než Harradise.png) -->
       <img src="Harradise.png" alt="Harradise logo" class="logo">
-<div style="margin-bottom: 20px; text-align: center;">
-  <h1 style="font-size: 28px; margin: 0; line-height: 1.2;">Harradise Harrachov</h1>
-  <h2 style="font-size: 20px; font-weight: normal; color: #555; margin: 6px 0 0;">Vaše ubytování v Krkonoších</h2>
+<div style="margin-bottom: 20px; display: flex; flex-direction: column; align-items: center;">
+  <h1 style="font-size: 28px; margin: 0; line-height: 1.2; text-align: center;">Harradise Harrachov</h1>
+  <h2 style="font-size: 20px; font-weight: normal; color: #555; margin: 6px 0 0; text-align: center;">Vaše ubytování v Krkonoších</h2>
 </div>
       <div class="stack-center">
         <p class="lead">Plně vybavený apartmán (nejen) pro rodiny v Harrachově pod Mumlavským vodopádem.</p>
