--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   <main class="container">
     <!-- Výhody -->
     <section class="card">
-      <h3>Proč Harradise</h3>
+      <h3>Proč se ubytovat u nás</h3>
       <ul class="features">
         <li>Ideální výchozí bod na běžky a skialpy, 200 m od stop</li>
         <li>Skiareál Harrachov nedaleko, zastávka skibusu 300 m</li>
