--- a/index.html
+++ b/index.html
@@ -60,8 +60,12 @@
 
     /* FEATURES */
     .card{
-      background:var(--card); border-radius:var(--radius); padding:20px; box-shadow:var(--shadow);
-    }
+  background:#f5fbf6;             /* jemně zelené pozadí */
+  border:1px solid #cde6d1;       /* decentní zelený rámeček */
+  border-radius:var(--radius);
+  padding:20px;
+  box-shadow:0 4px 12px rgba(0,0,0,0.05); /* lehčí stín */
+}
     ul.features{
       list-style: disc; padding-left:22px; margin:0;
       font-size:18px; line-height:1.6;
