--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
 </div>
 
       <!-- logo (změň název, pokud je jiný než Harradise.png) -->
-      <img src="Harradise.png" alt="Harradise logo" class="logo">
-<div style="margin-bottom: 20px; display: flex; flex-direction: column; align-items: center;">
-  <h1 style="font-size: 28px; margin: 0; line-height: 1.2; text-align: center;">Harradise Harrachov</h1>
-  <h2 style="font-size: 20px; font-weight: normal; color: #555; margin: 6px 0 0; text-align: center;">Vaše ubytování v Krkonoších</h2>
-</div>
+     <!-- HERO BANNER -->
+<section style="text-align: center; margin-bottom: 40px;">
+  <img src="hero-harrachov.jpg" alt="Harradise Harrachov" 
+       style="width: 100%; height: auto; border-radius: 20px;">
+</section>
       <div class="stack-center">
         <p class="lead">Plně vybavený apartmán (nejen) pro rodiny v Harrachově pod Mumlavským vodopádem.</p>
         <a class="cta" href="https://www.booking.com/Share-Pz2DesE" target="_blank" rel="noopener">Rezervujte si svůj pobyt tady</a>
