--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <!-- logo (změň název, pokud je jiný než Harradise.png) -->
      <!-- HERO BANNER -->
 <section style="text-align: center; margin-bottom: 40px;">
-  <img src="hero-harrachov.jpg" alt="Harradise Harrachov" 
+  <img src="ChatGPT Image Nov 12, 2025, 10_33_17 PM.png" alt="Harradise Harrachov" 
        style="width: 100%; height: auto; border-radius: 20px;">
 </section>
       <div class="stack-center">
