--- a/index.html
+++ b/index.html
@@ -122,9 +122,8 @@
       <!-- logo (změň název, pokud je jiný než Harradise.png) -->
    <!-- HERO BANNER -->
 <section style="text-align: center; margin-bottom: 40px;">
-  <img src="ChatGPT Image Nov 12, 2025, 10_33_17 PM.png" 
-       alt="Harradise Harrachov – Vaše ubytování v Krkonoších"
-       style="width: 100%; height: auto; border-radius: 20px;">
+ <img src="hero-harrachov.png.png" alt="Harradise Harrachov – Vaše ubytování v Krkonoších"
+     style="width: 100%; height: auto; border-radius: 20px;">
 </section>
       <div class="stack-center">
         <p class="lead">Plně vybavený apartmán (nejen) pro rodiny v Harrachově pod Mumlavským vodopádem.</p>
