--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <!-- logo (změň název, pokud je jiný než Harradise.png) -->
    <!-- HERO BANNER -->
 <section style="text-align: center; margin-bottom: 40px;">
- <img src="hero-harrachov.png.png" alt="Harradise Harrachov – Vaše ubytování v Krkonoších"
+<img src="Hero-harrachov.png.png" alt="Harradise Harrachov – Vaše ubytování v Krkonoších"
      style="width: 100%; height: auto; border-radius: 20px;">
 </section>
       <div class="stack-center">
