--- a/index.html
+++ b/index.html
@@ -119,10 +119,9 @@
   <a href="https://www.instagram.com/harradise__?igsh=YjZlN2Exb2hsOXpp" target="_blank" rel="noopener">Instagram</a>.
 </div>
 
-      <!-- logo (změň název, pokud je jiný než Harradise.png) -->
    <!-- HERO BANNER -->
 <section style="text-align: center; margin-bottom: 40px;">
-<img src="Hero-harrachov.png.png" alt="Harradise Harrachov – Vaše ubytování v Krkonoších"
+<img src="Hero-harrachov.png" alt="Harradise Harrachov – Vaše ubytování v Krkonoších"
      style="width: 100%; height: auto; border-radius: 20px;">
 </section>
       <div class="stack-center">
