--- a/index.html
+++ b/index.html
@@ -175,4 +175,7 @@
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
 </body>
+  <div style="background: yellow; padding: 10px; text-align: center;">
+  TEST TEST TEST
+</div>
 </html>
