--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
  <!-- HERO BANNER -->
 <section style="text-align: center; margin-bottom: 40px;">
-  <img src="Hero-harrachov.png" 
+  <img src="Hero.png" 
        alt="Harradise Harrachov – Vaše ubytování v Krkonoších"
        style="width: 100%; height: auto; border-radius: 20px;">
 </section>
