--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
     .stack-center{display:flex; flex-direction:column; align-items:center}
 
     /* FEATURES */
-    .card{
-  background:#f5fbf6;             /* jemně zelené pozadí */
-  border:1px solid #cde6d1;       /* decentní zelený rámeček */
+ .card{
+  background:#f5f9ff;              /* velmi světlá modrá */
+  border:1px solid #cddff7;        /* jemný modrý rámeček */
   border-radius:var(--radius);
   padding:20px;
-  box-shadow:0 4px 12px rgba(0,0,0,0.05); /* lehčí stín */
+  box-shadow:0 4px 12px rgba(0,0,0,0.05);
 }
     ul.features{
       list-style: disc; padding-left:22px; margin:0;
