--- a/index.html
+++ b/index.html
@@ -104,6 +104,20 @@
       margin-top:40px; border-top:1px solid #e5e7eb; padding-top:24px; color:var(--muted);
       font-size:14px; text-align:center;
     }
+    /* Mobilní styl – necháme obrázek tak, jak je */
+.hero-img {
+  width: 100%;
+  height: auto;
+  border-radius: 20px;
+}
+
+/* Desktop verze – zmenší hero banner */
+@media (min-width: 768px) {
+  .hero-img {
+    max-height: 550px;
+    object-fit: cover;
+  }
+}
   </style>
 </head>
 <body>
@@ -121,9 +135,9 @@
 
  <!-- HERO BANNER -->
 <section style="text-align: center; margin-bottom: 40px;">
-  <img src="Hero.png" 
-       alt="Harradise Harrachov – Vaše ubytování v Krkonoších"
-       style="width: 100%; height: auto; border-radius: 20px;">
+ <img src="Hero.png" 
+     alt="Harradise Harrachov – Vaše ubytování v Krkonoších"
+     class="hero-img">
 </section>
       <div class="stack-center">
         <p class="lead">Plně vybavený apartmán (nejen) pro rodiny v Harrachově pod Mumlavským vodopádem.</p>
