--- a/index.html
+++ b/index.html
@@ -134,16 +134,27 @@
 </div>
 
  <!-- HERO BANNER -->
-<section style="text-align: center; margin-bottom: 40px;">
- <img src="Hero.png" 
-     alt="Harradise Harrachov – Vaše ubytování v Krkonoších"
-     class="hero-img">
-</section>
-      <div class="stack-center">
-        <p class="lead">Plně vybavený apartmán (nejen) pro rodiny v Harrachově pod Mumlavským vodopádem.</p>
-        <a class="cta" href="https://www.booking.com/Share-Pz2DesE" target="_blank" rel="noopener">Rezervujte si svůj pobyt tady</a>
-      </div>
-    </div>
+<section style="position: relative; text-align: center; margin-bottom: 40px;">
+  <img src="Hero-harrachov.png" 
+       alt="Harradise Harrachov – Vaše ubytování v Krkonoších"
+       class="hero-img"
+       style="width: 100%; height: auto; border-radius: 20px;">
+
+  <!-- Scroll hint -->
+  <div style="
+       position: absolute;
+       bottom: 12px;
+       left: 50%;
+       transform: translateX(-50%);
+       background: rgba(0,0,0,0.35);
+       padding: 6px 12px;
+       border-radius: 12px;
+       color: white;
+       font-size: 14px;
+       backdrop-filter: blur(2px);
+       ">
+      ▼ Posuňte se níž
+  </div>
   </header>
 
   <main class="container">
