--- a/index.html
+++ b/index.html
@@ -133,29 +133,13 @@
   <a href="https://www.instagram.com/harradise__?igsh=YjZlN2Exb2hsOXpp" target="_blank" rel="noopener">Instagram</a>.
 </div>
 
- <!-- HERO BANNER -->
-<section style="position: relative; text-align: center; margin-bottom: 40px;">
+<!-- HERO BANNER -->
+<section style="text-align: center; margin-bottom: 40px;">
   <img src="Hero-harrachov.png" 
        alt="Harradise Harrachov – Vaše ubytování v Krkonoších"
        class="hero-img"
        style="width: 100%; height: auto; border-radius: 20px;">
-
-  <!-- Scroll hint -->
-  <div style="
-       position: absolute;
-       bottom: 12px;
-       left: 50%;
-       transform: translateX(-50%);
-       background: rgba(0,0,0,0.35);
-       padding: 6px 12px;
-       border-radius: 12px;
-       color: white;
-       font-size: 14px;
-       backdrop-filter: blur(2px);
-       ">
-      ▼ Posuňte se níž
-  </div>
-  </header>
+</section>
 
   <main class="container">
     <!-- Výhody -->
