--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 <!-- HERO BANNER -->
 <section style="text-align: center; margin-bottom: 40px;">
-  <img src="Hero-harrachov.png" 
+  <img src="Hero.png" 
        alt="Harradise Harrachov – Vaše ubytování v Krkonoších"
        class="hero-img"
        style="width: 100%; height: auto; border-radius: 20px;">
