--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
       <!-- zvýrazněná informace nahoře -->
 <div class="notice">
   <strong>Na webu se pracuje.</strong><br>
-  Máte dotazy nebo chcete individuální cenu?
+  Máte dotazy nebo chcete individuální nabídku?
   <a href="mailto:hajek.stiburkova@gmail.com">Napište nám</a>.
-  <br><br>
+  <br>
   Mrkněte také na náš
   <a href="https://www.instagram.com/harradise__?igsh=YjZlN2Exb2hsOXpp" target="_blank" rel="noopener">Instagram</a>.
 </div>
@@ -141,6 +141,18 @@
        style="width: 100%; height: auto; border-radius: 20px;">
 </section>
 
+      <div class="stack-center" style="margin-bottom: 28px;">
+  <h1 class="title" style="margin-top: 0;">Harradise Harrachov</h1>
+
+  <p class="lead">
+    Plně vybavený apartmán (nejen) pro rodiny v Harrachově pod Mumlavským vodopádem.
+  </p>
+
+  <a class="cta" href="https://www.booking.com/Share-Pz2DesE" target="_blank" rel="noopener">
+    Rezervujte si svůj pobyt tady
+  </a>
+</div>
+      
   <main class="container">
     <!-- Výhody -->
     <section class="card">
