--- a/index.html
+++ b/index.html
@@ -142,9 +142,8 @@
 </section>
 
       <div class="stack-center" style="margin-bottom: 28px;">
-  <h1 class="title" style="margin-top: 0;">Harradise Harrachov</h1>
 
-  <p class="lead">
+  <p class="lead" style="font-size: 22px;">
     Plně vybavený apartmán (nejen) pro rodiny v Harrachově pod Mumlavským vodopádem.
   </p>
 
