--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
 
       <div class="stack-center" style="margin-bottom: 28px;">
 
-  <p class="lead" style="font-size: 22px;">
-    Plně vybavený apartmán (nejen) pro rodiny pod Mumlavským vodopádem.
-  </p>
+ <p class="lead" style="font-size: 22px; white-space: nowrap;">
+  Plně vybavený apartmán (nejen) pro rodiny pod Mumlavským vodopádem.
+</p>
 
   <a class="cta" href="https://www.booking.com/Share-Pz2DesE" target="_blank" rel="noopener">
     Rezervujte si svůj pobyt tady
