--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <div class="stack-center" style="margin-bottom: 28px;">
 
 <p class="lead" style="font-size: 22px;">
-  Plně vybavený apartmán (nejen) pro rodiny pod&nbsp;Mumlavským&nbsp;vodopádem.
+  Plně vybavený apartmán (nejen) pro rodiny pod&nbsp;Mumlavským&nbsp;vodopádem
 </p>
 
   <a class="cta" href="https://www.booking.com/Share-Pz2DesE" target="_blank" rel="noopener">
