--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       <ul class="features">
         <li>Ideální výchozí bod na běžky a skialpy, 200 m od stop</li>
         <li>Skiareál Harrachov nedaleko, zastávka skibusu 300 m</li>
-        <li>Plně vybavený apartmán, vč. kompletního vybavení pro děti</li>
+        <li>Plně vybavený apartmán, vč. myčky, pračky se sušičkou a kompletního vybavení pro děti</li>
         <li>Velmi klidná poloha nedaleko centra</li>
         <li>Velká zahrada za domem na dělání sněhuláků a řádění na sněhu</li>
         <li>Velkolepá příroda všude kolem</li>
