--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <!-- zvýrazněná informace nahoře -->
 <div class="notice">
   <strong>Na webu se pracuje.</strong><br>
-  Máte dotazy nebo chcete individuální nabídku?
+  Chcete slevu na ubytování nebo máte dotazy?
   <a href="mailto:hajek.stiburkova@gmail.com">Napište nám</a>.
   <br>
   Mrkněte také na náš
