--- a/index.html
+++ b/index.html
@@ -186,9 +186,27 @@
     </section>
   </main>
 
-  <footer>
-    © <span id="year"></span> Harradise Harrachov • <a href="mailto:hajek.stiburkova@gmail.com">Kontakt</a>
-  </footer>
+<footer style="text-align:center; margin-top:50px; padding:20px 0; font-size:14px; color:#6b7280;">
+  <p style="margin:6px 0; font-weight:600;">Kontakt</p>
+
+  <p style="margin:6px 0;">
+    📍 Harrachov – pod Mumlavským vodopádem
+  </p>
+
+  <p style="margin:6px 0;">
+    📞 <a href="tel:+420XXXXXXXXX" style="color:#6b7280; text-decoration:none;">
+      +420 XXX XXX XXX
+    </a>
+  </p>
+
+  <p style="margin:6px 0;">
+    Nedovolali jste se?
+    <a href="mailto:hajek.stiburkova@gmail.com" style="color:#6b7280; text-decoration:none;">
+      Napište nám
+    </a>
+    – odpovídáme rychle.
+  </p>
+</footer>
 
   <script>
     // Rok v patičce
