--- a/index.html
+++ b/index.html
@@ -190,12 +190,12 @@
   <p style="margin:6px 0; font-weight:600;">Kontakt</p>
 
   <p style="margin:6px 0;">
-    📍 Harrachov – pod Mumlavským vodopádem
+    📍 Harrachov č. p. 650
   </p>
 
   <p style="margin:6px 0;">
-    📞 <a href="tel:+420XXXXXXXXX" style="color:#6b7280; text-decoration:none;">
-      +420 XXX XXX XXX
+    📞 <a href="tel:+420604192879" style="color:#6b7280; text-decoration:none;">
+      +420 604 192 879
     </a>
   </p>
 
