--- a/index.html
+++ b/index.html
@@ -187,25 +187,37 @@
   </main>
 
 <footer style="text-align:center; margin-top:50px; padding:20px 0; font-size:14px; color:#6b7280;">
+
   <p style="margin:6px 0; font-weight:600;">Kontakt</p>
 
+  <!-- Adresa -->
   <p style="margin:6px 0;">
-    📍 Harrachov č. p. 650
+    📍 Harrachov 650, 512 46 Harrachov
+    <br>
+    <a href="https://mapy.cz/zakladni?source=addr&id=13219392" 
+       target="_blank" 
+       rel="noopener" 
+       style="color:#6b7280; text-decoration:none;">
+       Otevřít v Mapy.cz
+    </a>
   </p>
 
+  <!-- Telefon -->
   <p style="margin:6px 0;">
     📞 <a href="tel:+420604192879" style="color:#6b7280; text-decoration:none;">
       +420 604 192 879
     </a>
   </p>
 
+  <!-- Email -->
   <p style="margin:6px 0;">
     Nedovolali jste se?
     <a href="mailto:hajek.stiburkova@gmail.com" style="color:#6b7280; text-decoration:none;">
-      Napište nám
+      Napište nám,
     </a>
     – odpovídáme rychle.
   </p>
+
 </footer>
 
   <script>
