--- a/index.html
+++ b/index.html
@@ -197,25 +197,24 @@
     <a href="https://mapy.cz/zakladni?source=addr&id=13219392" 
        target="_blank" 
        rel="noopener" 
-       style="color:#6b7280; text-decoration:none;">
+       style="color:#6b7280; text-decoration:underline;">
        Otevřít v Mapy.cz
     </a>
   </p>
 
   <!-- Telefon -->
   <p style="margin:6px 0;">
-    📞 <a href="tel:+420604192879" style="color:#6b7280; text-decoration:none;">
-      +420 604 192 879
+    📞 <a href="tel:+420XXXXXXXXX" style="color:#6b7280; text-decoration:underline;">
+      +420 XXX XXX XXX
     </a>
   </p>
 
   <!-- Email -->
   <p style="margin:6px 0;">
     Nedovolali jste se?
-    <a href="mailto:hajek.stiburkova@gmail.com" style="color:#6b7280; text-decoration:none;">
-      Napište nám,
-    </a>
-    – odpovídáme rychle.
+    <a href="mailto:hajek.stiburkova@gmail.com" style="color:#6b7280; text-decoration:underline;">
+      Napište nám
+    </a>, odpovídáme rychle.
   </p>
 
 </footer>
