--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
 
   <!-- Telefon -->
   <p style="margin:6px 0;">
-    📞 <a href="tel:+420XXXXXXXXX" style="color:#6b7280; text-decoration:underline;">
-      +420 XXX XXX XXX
+    📞 <a href="tel:+420604192879" style="color:#6b7280; text-decoration:underline;">
+      +420 604 192 879
     </a>
   </p>
 
