--- a/index.html
+++ b/index.html
@@ -194,17 +194,18 @@
   <p style="margin:6px 0;">
     📍 Harrachov 650, 512 46 Harrachov
     <br>
+    Otevřít v 
     <a href="https://mapy.cz/zakladni?source=addr&id=13219392" 
        target="_blank" 
        rel="noopener" 
-       style="color:#6b7280; text-decoration:underline;">
-       Otevřít v Mapy.cz
+       style="color:#4b85d9; text-decoration:none;">
+       Mapy.cz
     </a>
   </p>
 
   <!-- Telefon -->
   <p style="margin:6px 0;">
-    📞 <a href="tel:+420604192879" style="color:#6b7280; text-decoration:underline;">
+    📞 <a href="tel:+420604192879" style="color:#4b85d9; text-decoration:none;">
       +420 604 192 879
     </a>
   </p>
@@ -212,9 +213,10 @@
   <!-- Email -->
   <p style="margin:6px 0;">
     Nedovolali jste se?
-    <a href="mailto:hajek.stiburkova@gmail.com" style="color:#6b7280; text-decoration:underline;">
-      Napište nám
-    </a>, odpovídáme rychle.
+    <a href="mailto:hajek.stiburkova@gmail.com" style="color:#4b85d9; text-decoration:none;">
+      Napište nám,
+    </a>
+    odpovídáme rychle.
   </p>
 
 </footer>
