--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <!-- zvýrazněná informace nahoře -->
 <div class="notice">
   <strong>Na webu se pracuje.</strong><br>
-  Chcete slevu na ubytování nebo máte dotazy?
+  Nenašli jste, co jste hledali, nebo chcete slevu?
   <a href="mailto:hajek.stiburkova@gmail.com">Napište nám</a>.
   <br>
   Mrkněte také na náš
