--- a/index.html
+++ b/index.html
@@ -195,12 +195,12 @@
     📍 Harrachov 650, 512 46 Harrachov
     <br>
     Otevřít v 
-    <a href="https://mapy.cz/zakladni?source=addr&id=13219392" 
-       target="_blank" 
-       rel="noopener" 
-       style="color:#4b85d9; text-decoration:none;">
-       Mapy.cz
-    </a>
+<a href="https://mapy.cz/zakladni?q=Harrachov%20650%2C%20512%2046%20Harrachov" 
+   target="_blank" 
+   rel="noopener" 
+   style="color:#4b85d9; text-decoration:none;">
+   Mapy.cz
+</a>
   </p>
 
   <!-- Telefon -->
