--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
   <!-- Telefon -->
   <p style="margin:6px 0;">
-    📞 <a href="tel:+420604192879" style="color:#4b85d9; text-decoration:none;">
+📞 <a href="tel:+420604192879" style="color:#6b7280; text-decoration:none;">
       +420 604 192 879
     </a>
   </p>
