--- a/index.html
+++ b/index.html
@@ -178,6 +178,30 @@
 
     <!-- Informace o apartmánu – můžeš postupně rozšířit -->
     <section class="card">
+      <!-- Instagram teaser sekce -->
+<section style="text-align:center; margin:40px 0;">
+  <div style="display:inline-flex; align-items:center; gap:10px; color:#4b85d9;">
+
+    <!-- Ikona Instagramu -->
+    <svg xmlns="http://www.w3.org/2000/svg" 
+         width="22" height="22" fill="#4b85d9" viewBox="0 0 24 24">
+      <path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm10 2c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3h10zm-5 3c-2.757 0-5 2.243-5 5s2.243 5 5 5 5-2.243 5-5-2.243-5-5-5zm0 2c1.654 0 3 1.346 3 3s-1.346 3-3 3-3-1.346-3-3 1.346-3 3-3zm4.5-.75a1.25 1.25 0 11-.001 2.501A1.25 1.25 0 0116.5 8.25z"/>
+    </svg>
+
+    <!-- Text + odkaz -->
+    <a href="https://www.instagram.com/harradise__?igsh=YjZlN2Exb2hsOXpp" 
+       target="_blank" 
+       rel="noopener"
+       style="color:#4b85d9; text-decoration:none; font-size:16px; font-weight:500;">
+       Sledujte nás na Instagramu
+    </a>
+
+  </div>
+
+  <p style="color:#6b7280; margin-top:6px; font-size:14px;">
+    Fotky z hor, zima v Harrachově a novinky z našeho apartmánu ❄️
+  </p>
+</section>
       <h3>O apartmánu</h3>
       <p>
         Klidná poloha v pěším dosahu centra, přímo u stezek k Mumlavskému vodopádu.
