--- a/index.html
+++ b/index.html
@@ -126,11 +126,8 @@
       <!-- zvýrazněná informace nahoře -->
 <div class="notice">
   <strong>Na webu se pracuje.</strong><br>
-  Nenašli jste, co jste hledali, nebo chcete slevu?
+  Nenašli jste vše nebo chcete slevu?
   <a href="mailto:hajek.stiburkova@gmail.com">Napište nám</a>.
-  <br>
-  Mrkněte také na náš
-  <a href="https://www.instagram.com/harradise__?igsh=YjZlN2Exb2hsOXpp" target="_blank" rel="noopener">Instagram</a>.
 </div>
 
 <!-- HERO BANNER -->
@@ -199,7 +196,7 @@
   </div>
 
   <p style="color:#6b7280; margin-top:6px; font-size:14px;">
-    Fotky z hor, zima v Harrachově a novinky z našeho apartmánu ❄️
+    Objevte aktuální fotky z Harrachova i novinky z našeho apartmánu
   </p>
 </section>
       <h3>O apartmánu</h3>
