--- a/index.html
+++ b/index.html
@@ -18,6 +18,31 @@
       --brand:#d10000;    /* červená pro CTA */
       --brand-soft:#ffecec;
       --card:#f8fafc;     /* světle šedé pozadí karet */
+      .insta-pill-section{
+  margin:32px 0;
+  text-align:center;
+}
+.insta-pill{
+  display:inline-flex;
+  align-items:center;
+  gap:8px;
+  padding:8px 18px;
+  border-radius:999px;
+  border:1px solid #d1d5db;
+  background:#ffffff;
+  font-size:15px;
+  color:#374151;
+  text-decoration:none;
+  box-shadow:0 4px 12px rgba(0,0,0,0.04);
+  opacity:.96;
+  transition:transform .12s ease, box-shadow .12s ease, opacity .12s ease;
+}
+.insta-pill:hover{
+  transform:translateY(-1px);
+  box-shadow:0 6px 20px rgba(0,0,0,0.08);
+  opacity:1;
+}
+.insta-pill svg{flex-shrink:0;}
       --ring:rgba(0,0,0,0.08);
       --radius:18px;
       --shadow:0 6px 24px rgba(0,0,0,.08);
@@ -162,7 +187,45 @@
         <li>Velkolepá příroda všude kolem</li>
       </ul>
     </section>
+<main class="container">
+    <!-- Výhody -->
+    <section class="card">
+      <h3>Proč se ubytovat u nás</h3>
+      <ul class="features">
+        <li>Ideální výchozí bod na běžky a skialpy, 200 m od stop</li>
+        <li>Skiareál Harrachov nedaleko, zastávka skibusu 300 m</li>
+        <li>Plně vybavený apartmán, vč. myčky, pračky se sušičkou a kompletního vybavení pro děti</li>
+        <li>Velmi klidná poloha nedaleko centra</li>
+        <li>Velká zahrada za domem na dělání sněhuláků a řádění na sněhu</li>
+        <li>Velkolepá příroda všude kolem</li>
+      </ul>
+    </section>
 
+    <!-- Instagram – decentní kapslové tlačítko nad fotkami -->
+    <section class="insta-pill-section">
+      <a class="insta-pill"
+         href="https://www.instagram.com/harradise__?igsh=YjZlN2Exb2hsOXpp"
+         target="_blank"
+         rel="noopener">
+        <svg xmlns="http://www.w3.org/2000/svg"
+             width="18" height="18"
+             viewBox="0 0 24 24"
+             fill="#6b7280">
+          <path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm10 2c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3h10zm-5 3c-2.757 0-5 2.243-5 5s2.243 5 5 5 5-2.243 5-5-2.243-5-5-5zm0 2c1.654 0 3 1.346 3 3s-1.346 3-3 3-3-1.346-3-3 1.346-3 3-3zm4.5-.75a1.25 1.25 0 11-.001 2.501A1.25 1.25 0 0116.5 8.25z"/>
+        </svg>
+        <span>Sledujte nás na Instagramu</span>
+      </a>
+    </section>
+
+    <!-- Galerie – zatím zástupné náhledy; vyměň src za tvé fotky -->
+    <section>
+      <h3 class="center">Fotky</h3>
+      <div class="gallery">
+        <img class="thumb" src="images/IMG_20210527_154538~2.jpg" alt="Apartmán – obývací pokoj">
+        <img class="thumb" src="images/20241123_101905(1).jpg" alt="Apartmán – ložnice">
+        <img class="thumb" src="images/20250415_161024~2.jpg" alt="Pohled na okolí Harrachova">
+      </div>
+    </section>
     <!-- Galerie – zatím zástupné náhledy; vyměň src za tvé fotky -->
     <section>
 <h3 class="center">Fotky</h3>
